[package]
name = "evm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
dotenv = "0.15"
serde = { version = "1.0.147", features = ["derive"] }
governor = "0.5.0"
serde_yaml = "0.9.14"
serde_json = "1.0.87"
anyhow = "1.0.66"
actix-web = "4.2.1"
reqwest = { version = "0.11.12", features = ["json"] }
ttlhashmap = "0.1.0"
